# CPP-OOP-EXP-2

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: build-and-release.yml  cmake-multi-platform.yml
include/: circle.hpp  etriangle.hpp  parallelogram.hpp  point.hpp  polygon.hpp  rehexagon.hpp  shape.hpp  square.hpp  transform.hpp
src/: etriangle.cpp  parallelogram.cpp  point.cpp  polygon.cpp  rehexagon.cpp  transform.cpp
